--- a/website.css
+++ b/website.css
@@ -1,4 +1,4 @@
- body {
+body {
   margin: 0px;
 }
 .col-1 {
@@ -41,7 +41,6 @@
   display: flex;
   flex-wrap: wrap;
 }
-
 .container {
   max-width: 1000px;
   margin: auto;
@@ -50,31 +49,31 @@
   padding: 20px 0px 20px 0px;
 }
 /* Respnsive */
-@media screen and (max-width:1000px){
-  .col-2{
+@media screen and (max-width: 1000px) {
+  .col-2 {
     width: 50%;
   }
-  .col-3{
+  .col-3 {
     width: 50%;
   }
-  .col-4{
+  .col-4 {
     width: 50%;
   }
-  .col-6{
+  .col-6 {
     width: 100%;
   }
 }
-@media screen and (max-width:670px){
-  .col-2{
+@media screen and (max-width: 670px) {
+  .col-2 {
     width: 100%;
   }
-  .col-3{
+  .col-3 {
     width: 100%;
   }
-  .col-4{
+  .col-4 {
     width: 100%;
   }
-  .col-6{
+  .col-6 {
     width: 100%;
   }
 }
@@ -89,7 +88,6 @@
   border: none;
   border-radius: 10px;
   padding: 2px 7px 2px 7px;
-
   cursor: pointer;
 }
 #arabic-button {
@@ -145,17 +143,14 @@
 #header {
   padding: 10px;
 }
-.header-cart{
+.header-cart {
   display: flex;
   justify-content: space-between;
 }
 .header-head img {
   width: 130px;
 }
-
-
 /* Hero-Section */
-
 .hero-cart {
   padding: 150px 15em 10px 60px;
 }
@@ -241,7 +236,7 @@ form textarea {
   top: -27px;
 }
 .trust {
-  content: "my name is rafique"
+  content: "my name is rafique";
 }
 .trust-box::after {
   content: "";
@@ -266,7 +261,7 @@ form textarea {
 .about-head img {
   width: 260px;
 }
-.about-body{
+.about-body {
   padding: 0px 0px 0px 10px;
 }
 /* services-section */
